--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,6 @@
+December 2022: version 0.2
+        * Remove Path not used
+        * Change includes
+
 April 2020: version 0.1
         * First import
